# virtuocraft

./: Cargo.toml  README.md
.cargo/: config.toml
lib/image23d/: Cargo.toml
lib/video23d/: Cargo.toml
src/: main.rs
src/handlers/: health.rs  media_processing.rs  mod.rs
src/routes/: health_check.rs  media_processing.rs  mod.rs
src/services/: media_service.rs
