workspace = { members = ["lib/image23d", "lib/video23d"] }
[package]
name = "virtuocraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module", "auto-initialize"] }
