workspace = { members = ["lib/image23d", "lib/video23d"] }
[package]
name = "virtuocraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
axum = { version = "0.7.4" }
hyper = "1.1.0"
image = "0.24.8"
imageproc = "0.23.0"
pyo3 = { version = "0.20.2", features = ["extension-module", "auto-initialize"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_qs = "0.12.0"
tower = "0.4.13"
image23d = { path = "lib/image23d" }
video23d = { path = "lib/video23d" }
tokio = { version = "1.36.0", features = ["full", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["add-extension", "propagate-header", "set-header", "trace", "sensitive-headers", "validate-request"] }
tracing-subscriber = "0.3.18"
http = "1.0.0"
bytes = "1.5.0"

